Wed Jun 12 12:52:30 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (lib-windows): Replace spaces with tab

Mon Jun 10 23:40:48 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (lib-windows): Add production rule for sapkrb5.dll.
		Don't include config/windows.in, since that's included
		by wconfig.

	* win_glue.c: Add a quick hack for krb5-SAP so that we call
		the version server --- this is conditionalized on
		SAP_VERSERV, which is only defined when we build
		sapkrb5.dll.

Sat Jun  8 09:58:41 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Remove kdb4 library building

Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

Tue May  7 20:18:13 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: libdes425 now depends on libkrb5.

Fri Mar 15 15:21:32 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (CLEANLIBS): Add libkrb5util.a and libgssapi.a

Thu Feb 29 16:49:33 1996  Theodore Y. Ts'o  <tytso@dcl>

	* win_glue.c: Make sure WSACleanup() is called when the DLL exits.
		Note that calls to WSAStartup and WSACleanup must be in
		matched pairs.  If there is a missing WSACleanup call when
		a program exits, under Lan Workplace, the name resolver
		will stop working.

Tue Feb 27 18:47:17 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapi.def: We have implemented gss_inquire_names_for_mech, not
	        gss_inquire_mechs_for_name.
	
Sat Feb 24 18:47:41 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapi.def: Add new GSSAPI V2 calls. (XXX we still need to get
		the official function numbers defined for them.)

Wed Feb  7 00:23:18 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Folded in danw's changes to allow
		building Makefiles for the Macintosh.  We now can build
		MPW makefiles which are interpreted by CodeWarrior.
