@@ -1,3 +1,12 @@
+Tue Jul  9 16:44:22 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* win_glue.c: Add a quick hack so we can time-bomb the libkrb5.dll
+		and sapkrb5.dll when we compile them at MIT.
+	
+	* Makefile.in (sap_glue.obj): Build the sapkrb5.dll with the
+		timebomb enabled (since we couldn't get the version server
+		code working).
+
 Wed Jun 12 12:52:30 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* Makefile.in (lib-windows): Replace spaces with tab
